# ONN

./: .gitignore  README.md  bayesian.py  environment.yaml  main.py  mlp.py  mod_onn.py  og_onn.py  onn.py  onn_benchmark.old.py  onn_benchmark.py  onn_griewank.py  onn_integration.py  onn_integration_single.py  onn_slotted_patch.py  plot_benchmark.py  plot_og_onn.py  publication.mplstyle  pyproject.toml  test.py
